# tether-egui

./: .gitignore  Cargo.toml  README.md  clippy.toml  demo.json  dist-workspace.toml  widgets2.json
crates/tether/: cargo.toml
crates/tether/src/: lib.rs
src/: insights.rs  main.rs  midi_mapping.rs  model.rs  project.rs  settings.rs  tether_gui_utils.rs  tether_utils.rs  tweaks.rs  ui.rs  widgets.rs
src/gui/: common.rs  mod.rs  project_builder.rs  tether_gui_utils.rs  utilities_view.rs  widget_view.rs
src/widgets/: boolean.rs  colours.rs  empty.rs  generic.rs  mod.rs  numbers.rs  point.rs
wix/: main.wxs
