[package]
name = "tether-egui"
version = "0.8.1"
edition = "2021"


[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
env_logger = "0.10"
log = "0.4.17"
# tether-agent = { path = "../tether/base_agent/rs" }
tether-agent = "0.11"
# tether-utils = { path = "../tether/utilities/tether-utils"}
tether-utils = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmpv = { version = "0.4", features = ["with-serde"] }
rmp-serde = "0.13"
clap = { version = "4.1.1", features = ["derive"] }
rfd = "0.11"
