[package]
name = "tether-egui"
version = "0.9.0"
edition = "2021"
description = "GUI Builder for Tether Systems"

[dependencies]
egui = "0.21.0"
eframe = "0.21.3"
env_logger = "0.10"
log = "0.4.17"
# tether-agent = { path = "../tether/base_agent/rs" }
tether-agent = "0.11"
# tether-utils = { path = "../tether/utilities/tether-utils"}
tether-utils = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
rmpv = { version = "0.4", features = ["with-serde"] }
rmp-serde = "0.13"
clap = { version = "4.1.1", features = ["derive"] }
rfd = "0.11"

[package.metadata.bundle]
name = "TetherGUI"
identifier = "com.tether.tethergui"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
# version = "1.0.0"
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
# copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
# category = "Developer Tool"
# short_description = "An example application."
# long_description = """
# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
# eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
# enim ad minim veniam, quis nostrud exercitation ullamco laboris
# nisi ut aliquip ex ea commodo consequat.
# """
# deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
# osx_frameworks = ["SDL2"]
# osx_url_schemes = ["com.doe.exampleapplication"]